# cpp-simplerasters

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  simplerasters.pc.in  vcpkg.json
.github/workflows/: build_windows.yaml  change_conda_version.yaml  compile_windows.yaml  conda.yaml  conda_build.yaml  create_deb_file.yaml  create_releases.yaml  test_library.yaml  test_plugin.yaml
cmake/: Config.cmake.in  FindGDAL.cmake  FindPackageHandleStandardArgs.cmake  Packing.cmake
conda/: bld.bat  build.sh  conda-env.yaml  conda_build_config.yaml  meta.yaml  test_script.bat  test_script.sh
debian/: changelog  control  rules  simplerasters.install
scripts/: install.sh  release.sh  test.sh  uninstall.sh
scripts/precommit/: clang_format.sh  conda_version.sh
src/: CMakeLists.txt  abstractraster.cpp  helpers.cpp  helpers.h  projectedsquarecellraster.cpp  singlebandraster.cpp
src/api/: simplerasters.h
tests/: CMakeLists.txt  testfunctions.cpp  testprojectedsqurecellraster.cpp  testsettings.in.h  testsinglebandraster.cpp
tests/data/: dsm_4326.tif  dsm_byte.tif  dsm_float64.tif  dsm_int32.tif  dsm_no_nodata.tif  dsm_non_rectangular.tif
